...
enum class NavigationItem(
    val title: String,
    val selectedIcon: ImageVector,
    val unselectedIcon: ImageVector
) {
    DASHBOARD("Focus", Icons.Rounded.Home, Icons.Rounded.Home),
    APPS("Boundaries", Icons.Rounded.GridView, Icons.Rounded.GridView),
    STRICT("Strict", Icons.Rounded.Lock, Icons.Rounded.Lock),
    SETTINGS("Settings", Icons.Rounded.Settings, Icons.Rounded.Settings),
    ACCOUNT("Account", Icons.Rounded.Person, Icons.Rounded.Person)
}

class MainActivity : ComponentActivity() {

    private var monitorServiceStarted = false
...
